[tool.poetry]
name = "dht-crawler"
version = "0.1.0"
description = ""
authors = ["Xinhang Liu <xhliume@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
pysocks = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
